@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/funny-manpages
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/funny-manpages/ChangeLog,v 1.9 2007/03/06 19:44:36 gustavoz Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/funny-manpages/ChangeLog,v 1.10 2010/10/19 05:50:47 leio Exp $
+
+  19 Oct 2010; Mart Raudsepp <leio@gentoo.org>
+  funny-manpages-1.3_rc5-r1.ebuild:
+  Drop to ~mips
 
   06 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   funny-manpages-1.3_rc5-r1.ebuild:
